# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("ani_packages") {
    deps = [
        "./webview:webview_ani",
        "./webview:web_webview_abc_etc",
        "./webview:web_innerUI_abc_etc",
        "./webnativemessagingextension/ability:web_native_messaging_extension_context_ani_kit",
        "./webnativemessagingextension/manager:web_native_messaging_extension_manager_ani_kit",
        "./webnativemessagingextension/ets:web_native_messaging_extension_manager_abc_etc",
        "./webnativemessagingextension/ets:web_native_messaging_extension_context_abc_etc",
        "./webnativemessagingextension/ets:web_native_messaging_extension_ability_abc_etc",
    ]
}