# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/web/webview"

config("web_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webasynccontroller",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webdatabase",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webstorage",
  ]
}

ohos_shared_library("webview_napi") {
  include_dirs = [
    "//foundation/arkui/napi/interfaces/kits",
    "//utils/system/safwk/native/include",
  ]
  public_configs = [ ":web_public_config" ]

  sources = [
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common/napi_webview_native_module.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webasynccontroller/napi_web_async_controller.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webdatabase/napi_web_data_base.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webstorage/napi_web_storage.cpp",
  ]

  deps = [
    "//foundation/arkui/napi:ace_napi",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "webview:libnweb",
  ]

  relative_install_dir = "module/web"

  part_name = "webview"
  subsystem_name = "web"
}
