# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/web/webview"

config("web_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webasynccontroller",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webcookiemanager",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webdatabase",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webfunction",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webstorage",
  ]
}

ohos_shared_library("webview_napi") {
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/ability_runtime",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/bundlemgr",
    "$SUBSYSTEM_DIR/ohos_adapter/interfaces",
  ]
  public_configs = [ ":web_public_config" ]

  sources = [
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common/business_error.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common/napi_parse_utils.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common/napi_webview_native_module.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/common/web_errors.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webasynccontroller/napi_web_async_controller.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webcookiemanager/napi_web_cookie_manager.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webdatabase/napi_geolocation_permission.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webdatabase/napi_web_data_base.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webfunction/napi_webview_function.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webfunction/webview_web_inited_callback.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webstorage/napi_web_storage.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller/napi_webview_controller.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller/webview_controller.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller/webview_hasimage_callback.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller/webview_javascript_execute_callback.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/napi/webviewcontroller/webview_javascript_result_callback.cpp",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_image_framework:image",
    "multimedia_image_framework:image_native",
    "napi:ace_napi",
    "webview:libnweb",
  ]

  deps = [ "$SUBSYSTEM_DIR/ohos_adapter:nweb_ohos_adapter" ]

  relative_install_dir = "module/web"

  part_name = "webview"
  subsystem_name = "web"
}
