# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("UnregisterArkJSfunctionFuzzTest") {
  module_out_path = "web/webview"
  fuzz_config_file =
      "//base/web/webview/test/fuzztest/unregisterarkjsfunction_fuzzer"
  include_dirs = [
    "//base/web/webview/test/ohos_nweb",
    "//base/web/webview/interfaces/innerkits/ohos_nweb",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
    "//base/web/webview/test/fuzztest",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "unregisterarkjsfunction_fuzzer.cpp" ]
  deps = [
    "//base/web/webview/ohos_nweb:libnweb",
    "//foundation/graphic/graphic_2d:libsurface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/window/window_manager/wm:libwm",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":UnregisterArkJSfunctionFuzzTest",
  ]
}
###############################################################################
