# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "web/webview"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//base/web/webview/ohos_adapter/aafwk_adapter/include",
    "//third_party/googletest/googlemock/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/app_manager/include/appmgr",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/ability/ability_base/interfaces/kits/native/want/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base/include",
    "//foundation/ability/ability_base/interfaces/kits/native/configuration/include",
  ]
}

ohos_unittest("nweb_aafwk_client_test") {
  module_out_path = module_output_path

  sources = [ "nweb_aafwk_adapter_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//base/web/webview/ohos_adapter:nweb_ohos_adapter",
    "//foundation/ability/ability_runtime/interfaces/inner_api/app_manager:app_manager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/zlib:libz",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":nweb_aafwk_client_test" ]
}
