# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/web/webview/web_aafwk.gni")
import("//build/test.gni")

module_output_path = "webview/security"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "../../../ohos_adapter/aafwk_adapter/include" ]
}

ohos_unittest("nweb_aafwk_client_test") {
  module_out_path = module_output_path

  sources = [ "nweb_aafwk_adapter_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "$webview_path/ohos_adapter:nweb_ohos_adapter" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "graphic_2d:libcomposer",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:libnative_image",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "zlib:libz",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":nweb_aafwk_client_test" ]
}
